--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div>
-          <h1> Mi Perfil</h1>
+          <h1> SANTINO BERTOLA</h1>
     <a href="https://www.instagram.com/p/Cfz9TZksHHP/" target="_blank"><img src="img/WhatsApp Image 2022-07-13 at 9.31.22 PM.jpeg" alt="Yo"></a>
     <h2>Mi vida, el básquet y el deporte</h2>
     <p>Mi nombre es Santino Bertola, tengo 19 años y estoy estudiando programación en busca de tener nuevos conocimientos para poder trabajar de esto el día de mañana. Juego al básquet, que puedo asegurar que es mi pasión.</p>
