--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Mi Perfil - Desafio 1</title>
 </head>
 <body>
+    <header>
+        
+    </header>
     <div>
           <h1> SANTINO BERTOLA</h1>
     <a href="https://www.instagram.com/p/Cfz9TZksHHP/" target="_blank"><img src="img/WhatsApp Image 2022-07-13 at 9.31.22 PM.jpeg" alt="Yo"></a>
@@ -79,5 +82,12 @@
 
     <button>Enviar Formulario</button>
   </form>
+  <footer>
+    <ul>
+        <li>Sobre mi</li>
+        <li>Contactame</li>
+        <li>Preguntas frecuentes</li>
+    </ul>
+  </footer>
 </body>
 </html>
