archivo CSS añadido

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/styles.css">
     <title>Mi Perfil - Desafio 1</title>
 </head>
 <body>
@@ -12,7 +13,7 @@
     </header>
     <div>
           <h1> SANTINO BERTOLA</h1>
-    <a href="https://www.instagram.com/p/Cfz9TZksHHP/" target="_blank"><img src="img/WhatsApp Image 2022-07-13 at 9.31.22 PM.jpeg" alt="Yo"></a>
+            <a href="https://www.instagram.com/p/Cfz9TZksHHP/" target="_blank"><img src="img/WhatsApp Image 2022-07-13 at 9.31.22 PM.jpeg" alt="Yo"></a>
     <h2>Mi vida, el básquet y el deporte</h2>
     <p>Mi nombre es Santino Bertola, tengo 19 años y estoy estudiando programación en busca de tener nuevos conocimientos para poder trabajar de esto el día de mañana. Juego al básquet, que puedo asegurar que es mi pasión.</p>
     <ul>
